// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FastImage renders correctly. 1`] = `
<View
  style={
    Array [
      Object {
        "height": 44,
        "width": 44,
      },
      Object {
        "overflow": "hidden",
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      Object {
        "headers": Object {
          "token": "someToken",
        },
        "priority": "high",
        "uri": "https://facebook.github.io/react/img/logo_og.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`Renders a normal Image when not passed a uri. 1`] = `
<View
  style={
    Array [
      Object {
        "height": 44,
        "width": 44,
      },
      Object {
        "overflow": "hidden",
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../react-native-fast-image-example-server/pictures/jellyfish.gif",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
